tests/e2e/semantics/int_assign_bool.error
Error: syntax error in story at line 1, column 5

1|    a = 1 + true
          ^^^^^^^^

E0103: `+` between `int` and `boolean` is not supported.
